--- a/mer informasjon.html
+++ b/mer informasjon.html
@@ -13,7 +13,7 @@
 	<img id="logo" src="beerbud-logo.jpg" width="60px" title="logo" alt="beerbud logo">
 	<nav>
 		<ul>
-			<li id="home"><a class="menu-link" href="./Beerbud.html" style=>Home</a></li>
+			<li id="home"><a class="menu-link" href="./index.html" style=>Home</a></li>
 			<li class="menu"><a class="menu-link" href="./mer informasjon.html">Mer informasjon</a></li>
 			<li class="menu"><a class="menu-link" href="./butikk.html">Butikk </a> </li>
 			<li class="menu"><a class="menu-link" href="./blogg.html">Blogg</a> </li>
