--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	</nav>
 	
 	<div id="insta"> <a class="insta-link" href="https://www.instagram.com/beerbud.eb/"> 
-		<img id="insta-logo" align="left" src="Instagram-logo.png" width="50px" alt="instagram logo"> 
+		<img id="insta-logo" align="left" src="Instagram-logo.jpg" width="50px" alt="instagram logo"> 
 		<h2> @beerbud.eb   </h2> </a>
 		<a href="https://www.instagram.com/beerbud.eb/"> <img class="insta-bilde" src="bryggeri.jpg" width="300px" title="ringnes bryggeri" alt="maskninene inni et bryggeri"> <br>
 		<img class="insta-bilde" src="beerbud-slagord.jpg" width="300px" title="cheer it's beer!" alt="cheer it's beer!"> <br>
