--- a/blogg.html
+++ b/blogg.html
@@ -48,7 +48,7 @@
 	</nav>
 	
 	<div id="insta"> <a class="insta-link" href="https://www.instagram.com/beerbud.eb/"> 
-		<img id="insta-logo" align="left" src="Instagram-logo.jpg" width="50px" alt="instagram logo"> 
+		<img id="insta-logo" align="left" src="instagram-logo.jpg" width="50px" alt="instagram logo"> 
 		<h2 id="insta-handle"> @beerbud.eb   </h2>
 		 </a>
 	</div>
